--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "passport-vkontakte": "^0.3.2",
+    "request": "^2.88.2",
     "session-file-store": "^1.4.0"
   },
   "devDependencies": {
