--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-oauth2": "^1.5.0",
     "passport-vkontakte": "^0.3.2",
     "request": "^2.88.2",
+    "request-promise": "^4.2.5",
     "session-file-store": "^1.4.0"
   },
   "devDependencies": {
